Add detailed class-level Javadoc comments across backend and frontend components
- Documented primary classes like `ApplicationConfiguration`, `OpenApiConfig`, services (`FileProcessingServiceImpl`, `SignalHeaderService`, `GeneralHeaderService`), and models (`SignalHeader`, `GeneralHeader`, `FileInfo`) with their purpose, properties, and functionalities.
- Enhanced Angular components and services, including `EdfListComponent`, `EdfApiService`, `AppComponent`, and `AppModule`, with descriptive comments for metadata, methods, and usage.
- Updated `getAllEdfFiles` in `EdfController` with detailed method-level comments.
- Simplified unnecessary `Collectors.toList()` in favor of `toList()` in `FileProcessingServiceImpl`.
- Minor formatting tweaks and optimizations for Javadoc and TypeScript documentation.